# webserv

./: .gitignore  CMakeLists.txt  Makefile  Notes  README.md  config.json  sendMe.txt
cgi/python/: cgi.py
cgi_bin/go/: cgi.go
cgi_bin/python/: cgi.py
includes/: Buffer.hpp  CGIHandler.hpp  Config.hpp  Cookie.hpp  EpollHelper.hpp  ErrorReponse.hpp  ErrorResponse.hpp  HttpRequests.hpp  HttpResponse.hpp  LogSys.hpp  MethodHandler.hpp  RaiiFd.hpp  RedirectHandler.hpp  Server.hpp  SharedEnums.hpp  SharedTypes.hpp  TinyJson.hpp  TinyJson.tpp  TinyJsonSerializable.hpp  WebServ.hpp  WebServErr.hpp  signalHandler.hpp  urlHelper.hpp  utils.hpp  webserv.hpp
mainPage/: index.html
srcs/: Buffer.cpp  CGIHandler.cpp  Config.cpp  Cookie.cpp  EpollHelper.cpp  ErrorResponse.cpp  HttpRequests.cpp  HttpResponse.cpp  LogSys.cpp  MethodHandler.cpp  RaiiFd.cpp  RedirectHandler.cpp  Server.cpp  SharedTypes.cpp  TinyJson.cpp  TinyJson.tpp  WebServ.cpp  WebServErr.cpp  main.cpp  signalHandler.cpp  urlHelper.cpp  utils.cpp
test/: conf-d.json  conf-greg-school.json  conf-greg.json  conf-local.json  conf.json
test/config/: testConfig.cpp
test/pytest/: greg-test.py  test.py
test/test/: test.cpp  test_parsing.cpp
test/tinyjson/: testTinyJson.cpp
www/app/: index.html
www/app/static/: denied.html  removable.html
www/app/static/error/: 301.html  400.html  401.hmtl  403.html  404.html  405.html  409.html  500.html  501.html  502.html  503.html
